--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Natalia's Fun Educational App</title>
+    <link rel="icon" href="/Public/favicon.ico" type="image/png" />
   </head>
   <body>
     <div id="root"></div>
